# toydb

./: .gitignore  Cargo.toml  README.md
example/: dummy.tql
src/: dbclient.rs  dbserver.rs  engine.rs  engine_operator.rs  index.rs  main.rs  query.rs  query_parser.rs  query_parser.rs.fmt  repl.rs  repl_client.rs  table_sync.rs  util.rs  util.rs.fmt
