[package]
name = "toydb"
version = "0.1.0"
authors = ["Peter Arato <it.arato@gmail.com>"]

[dependencies]
log = "0.4.1"
env_logger = "0.5.10"
hyper = "0.12.1"
futures = "0.1"
serde_json = "1.0.21"
serde = "1.0.66"
serde_derive = "1.0.66"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/repl_client.rs"
